Add PixelStarsComponent for dynamic star effects and refactor audio controls for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
 </head>
 <body>
     <!-- Pixel stars -->
-    <div class="stars">
-        <div class="star" style="top: 10%; left: 10%; animation-delay: 0s;"></div>
-        <div class="star" style="top: 20%; left: 80%; animation-delay: 1s;"></div>
-        <div class="star" style="top: 70%; left: 20%; animation-delay: 2s;"></div>
-        <div class="star" style="top: 80%; left: 70%; animation-delay: 3s;"></div>
-        <div class="star" style="top: 40%; left: 90%; animation-delay: 4s;"></div>
-        <div class="star" style="top: 60%; left: 5%; animation-delay: 5s;"></div>
-    </div>
+    <pixel-stars></pixel-stars>
 
     <div class="container">
         <!-- Header -->
@@ -25,12 +18,11 @@
             <div class="subtitle">GET READY FOR 8-BIT KNOWLEDGE!</div>
         </div>
 
+        <!-- Nyan Cat Music -->
         <nyan-cat-music></nyan-cat-music>
 
         <!-- Setup Screen -->
-        <div class="setup-screen" id="setupScreen">
-            
-        </div>
+        <div class="setup-screen" id="setupScreen"></div>
 
         <!-- Loading Screen -->
         <div class="loading" id="loadingScreen">
@@ -39,9 +31,7 @@
         </div>
 
         <!-- Game Screen -->
-        <div class="game-screen" id="gameScreen">
-            
-        </div>
+        <div class="game-screen" id="gameScreen"></div>
 
         <!-- Results Screen -->
         <div class="results-screen" id="resultsScreen">
