Reorganizacion de archivos dentro de una carpeta src e implementado el atributo src al elemento nyan-cat-music

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🌈 Nyan Cat Trivia Adventure! 🐱</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,7 +19,7 @@
         </div>
 
         <!-- Nyan Cat Music -->
-        <nyan-cat-music></nyan-cat-music>
+        <nyan-cat-music src="/src/assets/nyan_cat_music.mp3"></nyan-cat-music>
 
         <!-- Setup Screen -->
         <div class="setup-screen" id="setupScreen"></div>
@@ -65,6 +65,6 @@
         </div>
     </div>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="src/js/main.js"></script>
 </body>
 </html>
