Implement game results screen and refactor game setup logic

--- a/index.html
+++ b/index.html
@@ -34,35 +34,7 @@
         <div class="game-screen" id="gameScreen"></div>
 
         <!-- Results Screen -->
-        <div class="results-screen" id="resultsScreen">
-            <h2>GAME COMPLETE!</h2>
-            <div class="results-trophy">🏆</div>
-            
-            <div class="results-stats">
-                <div class="stat-item">
-                    <span class="stat-value" id="finalScore">850</span>
-                    <div class="stat-label">TOTAL POINTS</div>
-                </div>
-                <div class="stat-item">
-                    <span class="stat-value" id="correctAnswers">8/10</span>
-                    <div class="stat-label">CORRECT</div>
-                </div>
-                <div class="stat-item">
-                    <span class="stat-value" id="successRate">80%</span>
-                    <div class="stat-label">SUCCESS RATE</div>
-                </div>
-                <div class="stat-item">
-                    <span class="stat-value" id="avgTime">15.3S</span>
-                    <div class="stat-label">AVG TIME</div>
-                </div>
-            </div>
-
-            <div style="margin-top: 30px;">
-                <button class="btn btn-success" id="playAgainBtn">PLAY AGAIN</button>
-                <button class="btn btn-secondary" id="newConfigBtn">NEW CONFIG</button>
-                <button class="btn" id="exitBtn">EXIT GAME</button>
-            </div>
-        </div>
+        <div class="results-screen" id="resultsScreen"></div>
     </div>
 
     <script type="module" src="src/js/main.js"></script>
